Remove author details.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,4 @@
-Juergen Knoedlseder (jurgen.knodlseder@irap.omp.eu) - overall design
-Jean-Baptiste Cayrou (cayrou@etud.insa-toulouse.fr) - openmp support
-Christoph Deil (Christoph.Deil@mpi-hd.mpg.de)       - HESS support
-Mathieu De Naurois (denauroi@in2p3.fr)              - HESS support
+Juergen Knoedlseder (jurgen.knodlseder@irap.omp.eu)
+Jean-Baptiste Cayrou (cayrou@etud.insa-toulouse.fr)
+Christoph Deil (Christoph.Deil@mpi-hd.mpg.de)
 
