--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,11 @@
-2013-04-09  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2013-11-19  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 0.7.0 released
         ========================
 
         Adapt to GammaLib-00-08-00 interface
-        ctobssim now only simulates events within ROI
+        ctobssim now only simulates events within ROI and supports
+          all kinds of data space models
 
 2012-12-21  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
