--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2013-11-19  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2013-11-20  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 0.7.0 released
         ========================
@@ -6,6 +6,7 @@
         Adapt to GammaLib-00-08-00 interface
         ctobssim now only simulates events within ROI and supports
           all kinds of data space models
+        ctbin now implements LIN and FILE binning algorithms
 
 2012-12-21  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
