--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ New Features and Important Changes in ctools 00-07-00
 
 Author(s) : Juergen Knoedlseder
 
-8 January 2014
+17 January 2014
 
 
 1. Introduction
@@ -17,7 +17,10 @@ detailed below as they do not impact the functionalities.
 
 2. Configuration
 -----------------
-None
+The configuration script now updates any parameter files in the users
+pfiles directory that is older than the system parameter files. This
+corrects for problems that arose when parameter files in the pfiles
+directory did not include all parameters necessary for the latest version.
 
 
 3. Python interface
