--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 ctools information
 ==================
-Version:             00-07-00 (November 29th, 2013)
+Version:             00-07-00 (18 January 2014)
 Author:              Juergen Knodlseder (jurgen.knodlseder@irap.omp.eu)
 GammaLib dependency: 00-08-00
 
@@ -29,10 +29,10 @@ See the files "NEWS" and "ChangeLog".
 What are the ctools anyway?
 ===========================
 ctools are ftools-like executable for the scientific analysis of
-CTA observations. They are based on GammaLib, a versatile toolbox 
+CTA observations.  They are based on GammaLib, a versatile toolbox 
 for the high-level analysis of astronomical gamma-ray data.
 
-The following tools are so far available:
+The following tools are available:
 
     ctbin    - event binning
     ctlike   - maximum likelihood model fitting
@@ -49,10 +49,11 @@ https://cta-redmine.irap.omp.eu/projects/ctools - for ctools development
 http://gammalib.sourceforge.net                 - for GammaLib documentation
 https://sourceforge.net/projects/gammalib/      - for GammaLib downloads
 
+
 Prerequisites
 =============
-ctools require GammaLib. Please refer to http://gammalib.sourceforge.net
-for instructions about how to install GammaLib. The GammaLib code can
+ctools require GammaLib.  Please refer to http://gammalib.sourceforge.net
+for instructions about how to install GammaLib.  The GammaLib code can
 be downloaded from https://sourceforge.net/projects/gammalib/.
 
 Once GammaLib is properly installed, make sure that you added the setup
@@ -164,12 +165,31 @@ To be written ...
 
 Documentation
 =============
-To be written ...
+The doc directory (usually at /usr/local/gamma/share/doc/ctools)  
+contains the most recent set of updated documentation for this release.
+A detailed documentation can be created by typing:
+
+    % make doc
+
+before installing the library. Two types of documentation exist:
+* code documentation
+* user documentation
+
+Code documentation is created using Doxygen.  You need Doxygen on your
+system to generate the code documentation.  This includes man pages.  
+Doxygen can be obtained from http://www.stack.nl/~dimitri/doxygen/. 
+
+User documentation is created using Sphinx.  You need Sphinx on your
+system to generate the user documentation.  Sphinx can be obtained
+from http://sphinx-doc.org/install.html.
 
 
 Bug reports
 ===========
-To be written ...
+To report or search for bugs, please use the ctools Bug Tracker at
+https://cta-redmine.irap.omp.eu/projects/ctools.  Before using the
+tracker, please read
+https://cta-redmine.irap.omp.eu/projects/ctools/wiki/Submission_guidelines
 
 
 Known problems
@@ -177,9 +197,9 @@ Known problems
 Solaris
   Although ctools compile on Solaris using the Sun compiler, there are
   problems with global symbols in the shared GammaLib library that prevent
-  the model registry to work correctly. Furthermore, GammaLib is not able
+  the model registry to work correctly.  Furthermore, GammaLib is not able
   to catch its own exceptions, which prevents the FITS interface to work
-  correctly. Possible it will work using gcc on Solaris, yet this has not
+  correctly.  Possible it will work using gcc on Solaris, yet this has not
   so far been tested.
 
 
