--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2014-01-24  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2014-01-30  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
         
         * Bug fix Version 0.7.1 released
         ================================
@@ -6,6 +6,7 @@
         Added missing hyphens in pfiles synchronisation section (#1091)
         Add configuration test script (#1091)
         Correctly filter instrument and id attributes in ctobssim
+        Use reworked GCaldb for calibration data access (#1116)
 
 
 2014-01-18  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
