--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,8 @@
-New Features and Important Changes in ctools 00-07-01
+New Features and Important Changes in ctools 00-07-02
 
 Author(s) : Juergen Knoedlseder
 
-5 February 2014
+10 February 2014
 
 
 1. Introduction
@@ -13,13 +13,7 @@ important changes made since the last release of ctools.
 
 2. Configuration
 -----------------
-Some hyphens were missing in the configuration script when synchronising
-the user and system parameter files. This led to an error message on the
-console, but did not impact the proper configuration. Hyphens have now
-been added as needed.
-
-The configuration test script testconf.sh has been added to allow testing
-configuration script during continous integration.
+None
 
 
 3. Python interface
@@ -29,13 +23,7 @@ None
 
 4. ctobssim - CTA observation simulation
 ----------------------------------------
-The instrument and id attributes provided by an observation were not
-considering when simulating source and background events. This has been
-changed now that only events will be simulated when the instrument
-and id are valid for a given model.
-
-ctobssim now has full access to the calibration database, allowing
-the use for 2D response functions in FITS files.
+None
 
 
 5. ctselect - CTA event selection
@@ -50,8 +38,7 @@ None
 
 7. ctlike - CTA maximum likelihood fitting
 ------------------------------------------
-ctobssim now has full access to the calibration database, allowing
-the use for 2D response functions in FITS files.
+None
 
 
 8. ctskymap - CTA sky mapping
@@ -61,8 +48,7 @@ None
 
 9. ctmodel - CTA counts map modelling
 -------------------------------------
-ctobssim now has full access to the calibration database, allowing
-the use for 2D response functions in FITS files.
+None
 
 
 10. Examples
@@ -72,8 +58,9 @@ None
 
 11. Scripts
 -----------
-The obsutils.py script has been adapted to the new calibration database
-interface.
+Add logL and event statistics to cspull output file.
+
+Convert all tabs into spaces.
 
 
 12. caldb
