--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,10 @@
-2014-02-01  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2014-06-26  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 0.8.0 released
         ========================
 
         Support energy dispersion in ctobssim, ctlike and ctmodel	
+        Enhance documentation
 
 
 2014-02-20  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
