Correct for thread safety in ctobssim.
ctobssim was not fully thread save as the models were shared among the threads which led to concurrent memory access when evaluating the Monte Carlo cache. The models are now copied within the parallel section, avoiding concurrent memory access (#1258).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,10 @@
-2014-06-26  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2014-07-09  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 0.8.0 released
         ========================
 
         Support energy dispersion in ctobssim, ctlike and ctmodel	
+        Correct ctobssim for thread safety
         Enhance documentation
 
 
