--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ New Features and Important Changes in ctools 00-08-00
 
 Author(s) : Juergen Knoedlseder
 
-9 July 2014
+10 July 2014
 
 
 1. Introduction
@@ -65,24 +65,33 @@ the use for 2D response functions in FITS files.
 ctmodel now also supports the handling of energy dispersion. Energy
 dispersion can be switched on or off using the hidden edisp parameter.
 
+10. ctexpcube - CTA exposure cube
+---------------------------------
+The first version of the ctexpcube tool is included in the release.
+ctexpcube computes the exposure cube for an observation definition
+file. The cube definition may be taken from a counts map or may be
+specified by user parameters.
 
-10. Examples
+
+11. Examples
 ------------
 None
 
 
-11. Scripts
+12. Scripts
 -----------
 Add logL and event statistics to cspull output file.
 
 Convert all tabs into spaces.
 
+The obsutils script has now been moved into the ctools module namespace.
 
-12. caldb
+
+13. caldb
 ---------
 None
 
 
-13. models
+14. models
 ----------
 None
