ctbin now always merges event lists into a single counts cube.
WARNING: The philosophy behind the ctbin tool changed fundamentally!

ctbin now always produces a single counts cube on output. If a single event list is specified on input, the functionnality is basically unchanged. If multiple event lists are specified, however, events are now merged into a single counts cube file. No observation definition XML file is written anymore!

So far, ctbin still writes pointing information in the counts cube, although this is not necessarily meaningful if merging event lists with different pointings. In the long run, pointing information will be summarized in a pointings definition file, and will be removed from the counts cube header. The logic is that the pointing definition is set to the map centre. This is only identical to the pointing in case of binning a single event list and using the usepnt=yes option (or specifying the pointing manually as the xref and yref parameters).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2014-07-10  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2014-07-18  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 0.8.0 released
         ========================
 
+        ctbin now always merges event lists into a single counts cube
         Add ctexpcube tool
         Support energy dispersion in ctobssim, ctlike and ctmodel	
         Correct ctobssim for thread safety
