--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
         * Version 0.8.0 released
         ========================
 
+	Adapt to GammaLib 0.9.0 interface
         ctbin now always merges event lists into a single counts cube
         Add ctexpcube tool
         Support energy dispersion in ctobssim, ctlike and ctmodel	
