--- a/NEWS
+++ b/NEWS
@@ -80,27 +80,37 @@ the use for 2D response functions in FITS files.
 ctmodel now also supports the handling of energy dispersion. Energy
 dispersion can be switched on or off using the hidden edisp parameter.
 
-10. ctexpcube - CTA exposure cube
----------------------------------
+
+10. ctexpcube - CTA exposure cube generation
+--------------------------------------------
 The first version of the ctexpcube tool is included in the release.
 ctexpcube computes the exposure cube for an observation definition
-file. The cube definition may be taken from a counts map or may be
+file. The cube definition may be taken from a counts cube or may be
 specified by user parameters.
 
 
-11. ctcubemask - CTA cube filtering
+11. ctpsfcube - CTA point spread function cube generation
+---------------------------------------------------------
+The first version of the ctpsfcube tool is included in the release.
+ctpsfcube computes the point spread function cube for an observation
+definition file. The cube definition may be taken from a counts cube
+or may be specified by user parameters.
+
+
+12. ctcubemask - CTA cube filtering
 -----------------------------------
 The first version of the ctcubemask tool is included in the release.
 ctcubemask allows filtering of bins in a counts cube by setting the
 bin content to -1. Filtering can be done by energy, for a circular
 Region of Interest (ROI) or using ds9 exclusion regions.
 
-12. Examples
+
+13. Examples
 ------------
 None
 
 
-13. Scripts
+14. Scripts
 -----------
 Add logL and event statistics to cspull output file.
 
@@ -109,11 +119,11 @@ Convert all tabs into spaces.
 The obsutils script has now been moved into the ctools module namespace.
 
 
-14. caldb
+15. caldb
 ---------
 None
 
 
-15. models
+16. models
 ----------
 None
