--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2014-07-20  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2014-07-22  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 0.8.0 released
         ========================
@@ -6,7 +6,8 @@
 	Adapt to GammaLib 0.9.0 interface
         ctbin now always merges event lists into a single counts cube
         Add ctexpcube tool (generates exposure cube)
-        Add ctpsfcube tool (generated PSF cube)
+        Add ctpsfcube tool (generates PSF cube)
+        Add ctbkgcube tool (generates background cube)
         Add ctcubemask tool (masks event bins in event cube)
         Support energy dispersion in ctobssim, ctlike and ctmodel	
         Correct ctobssim for thread safety
