--- a/NEWS
+++ b/NEWS
@@ -126,6 +126,17 @@ Convert all tabs into spaces.
 
 The obsutils script has now been moved into the ctools module namespace.
 
+The following functions have been added to obsutils:
+* set_obs() replaces the now obsolete set() function
+* set_obs_list() returns an observation container filled with a list of
+  observations
+* set_obs_patterns() defines standard patterns of CTA observations.
+  Current options are:
+  - "single": single pointing
+  - "four": four pointings offset by specific angle around centre
+* spectrum() generates spectral points by fitting a source model in
+  specified energy bins.
+
 
 16. caldb
 ---------
