--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2014-07-24  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2014-10-06  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 0.8.0 released
         ========================
@@ -10,6 +10,7 @@
         Add ctpsfcube tool (generates PSF cube)
         Add ctbkgcube tool (generates background cube)
         Add ctcubemask tool (masks event bins in event cube)
+        Add cttsmap tool (generates TS map)
         Support energy dispersion in ctobssim, ctlike and ctmodel	
         Correct ctobssim for thread safety
         Move obsutils to ctools namespace
